# Grassy

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Grassy.cabal  LICENSE  README.md
grass/: Main.hs
plant/: Main.hs
src/Language/: Grass.hs
src/Language/Grass/: Interpreter.hs  Transpiler.hs
src/Language/Grass/Interpreter/: Parser.hs  VM.hs
src/Language/Grass/Transpiler/: Untyped.hs
src/Language/Grass/Transpiler/Untyped/: Optimization.hs  Parser.hs  Term.hs  Transformation.hs
