name:                Grassy
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/susisu/Grassy#readme
license:             BSD3
license-file:        LICENSE
author:              Susisu
maintainer:          susisu2413@yahoo.co.jp
copyright:           copyright (c) 2017 Susisu
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Grass
                     , Language.Grass.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , safe
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/susisu/Grassy
