name:                Grassy
version:             0.2.0.0
synopsis:            Toolkit for the Grass programming language
-- description:
homepage:            https://github.com/susisu/Grassy#readme
license:             BSD3
license-file:        LICENSE
author:              Susisu
maintainer:          susisu2413@yahoo.co.jp
copyright:           copyright (c) 2017 Susisu
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable grass
  hs-source-dirs:      grass
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , text
                     , Grassy
  default-language:    Haskell2010

executable plant
  hs-source-dirs:      plant
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , text
                     , Grassy
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Language.Grass.Interpreter
                     , Language.Grass.Interpreter.VM
                     , Language.Grass.Interpreter.Parser
                     , Language.Grass.Transpiler.Untyped
                     , Language.Grass.Transpiler.Untyped.Term
                     , Language.Grass.Transpiler.Untyped.Parser
                     , Language.Grass.Transpiler.Untyped.Transformation
                     , Language.Grass.Transpiler.Untyped.Optimization
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , parsec
                     , safe
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

source-repository head
  type:     git
  location: https://github.com/susisu/Grassy
